cmake_minimum_required(VERSION 3.22)
project(BoostLearn)

list(APPEND CMAKE_PREFIX_PATH $ENV{THIRD_PARTY_DIR})

#add_subdirectory(network/SyncClient)
#add_subdirectory(network/SyncServer)
#add_subdirectory(network/AsyncServer01)
#add_subdirectory(network/AsyncServer02)
#add_subdirectory(network/AsyncServer03)
#add_subdirectory(network/SyncClient03)
#add_subdirectory(network/PacketStickClient)
#add_subdirectory(network/PacketStickServer)
#add_subdirectory(network/ReadAtLeastServer)
#add_subdirectory(network/AsyncServer04)
#add_subdirectory(network/SyncClient04)
#add_subdirectory(network/ProtobufServer)
#add_subdirectory(network/ProtobufClient)
#add_subdirectory(network/JsonServer)
#add_subdirectory(network/JsonClient)
add_subdirectory(example/MyTcpServer)
add_subdirectory(example/MyTcpClient)
